Adjusted CSS for Fontawesome icons

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -224,7 +224,7 @@
              data-btntype="all"
              title="Add new record"
              tabindex="0">
-            <i class=" fa fa-plus"></i>
+            <i class=" fa fa-plus-circle"></i>
             <span class="action-label" style="padding-left: 3px;">Add</span>
         </div>
 
@@ -303,7 +303,7 @@
              title="Edit record"
              tabindex="0"
              id="edit_button">
-            <i class=" fa fa-pencil-square-o"></i>
+            <i class=" fa fa-pencil-square"></i>
             <span class="action-label" style="padding-left: 3px;">Edit</span>
         </div>
 
@@ -337,7 +337,7 @@
              data-btntype="single"
              title="Summarise record"
              tabindex="0">
-            <i class=" fa fa-info"></i>
+            <i class=" fa fa-info-circle"></i>
             <span class="action-label" style="padding-left: 3px;">Summarise</span>
         </div>
 
@@ -348,7 +348,7 @@
              data-btntype="multi"
              title="Submit Assembly"
              tabindex="0">
-            <i class=" fa fa-info"></i>
+            <i class=" fa fa--circle"></i>
             <span class="action-label" style="padding-left: 3px;">Submit</span>
         </div>
 
@@ -359,7 +359,7 @@
              data-btntype="multi"
              title="Submit Annotation"
              tabindex="0">
-            <i class=" fa fa-info"></i>
+            <i class=" fa fa-info-circle"></i>
             <span class="action-label" style="padding-left: 3px;">Submit</span>
         </div>
 
@@ -370,7 +370,7 @@
              data-btntype="multi"
              title="Submit Read"
              tabindex="0">
-            <i class=" fa fa-info"></i>
+            <i class=" fa fa-info-circle"></i>
             <span class="action-label" style="padding-left: 3px;">Submit</span>
         </div>
 
@@ -414,7 +414,7 @@
             data-btntype="multi"
             title="Submit Tagged Sequence"
             tabindex="0">
-            <i class=" fa fa-info"></i>
+            <i class=" fa fa-info-circle"></i>
             <span class="action-label" style="padding-left: 3px;">Submit</span>
         </div>
 
