Corrected the Fontawesome CSS for the 'Submit' button

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -348,7 +348,7 @@
              data-btntype="multi"
              title="Submit Assembly"
              tabindex="0">
-            <i class=" fa fa--circle"></i>
+            <i class=" fa fa-info-circle"></i>
             <span class="action-label" style="padding-left: 3px;">Submit</span>
         </div>
 
