--- a/src/apps/copo_landing_page/templates/frontpage.html
+++ b/src/apps/copo_landing_page/templates/frontpage.html
@@ -58,7 +58,7 @@
         </section>
     </div>
     <!-- </br></br></br></br></br> -->
-    <footer id="footer" class="for-full-back">
+    <footer id="footer" class="for-full-back footer-frontpage">
         <div class="pull-right">
             <a href="https://www.earlham.ac.uk/">
                 <img class="img-responsive" src="{% static 'assets/img/ei.png' %}" width="200" height="200" alt="Earlham Institute logo"/>
