--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -24,6 +24,7 @@ body {
     position: relative;
 }
 
+/* footer styles */
 #footer {
     background-color: white;
     height: 100px;
@@ -32,6 +33,11 @@ body {
     margin-top: 1.5px;
     position: absolute;
     bottom: 0;
+}
+
+.footer-frontpage {
+    margin-top: 100px !important;
+    bottom: initial !important
 }
 
 /*=======================================
