--- a/src/apps/copo_landing_page/templates/contact.html
+++ b/src/apps/copo_landing_page/templates/contact.html
@@ -10,7 +10,7 @@
 <div class="col-md-12 contact-div">
     <div id="contact-sec" class="col-md-12">
         <div style="padding-top: 10px;">
-            <form id="email_form" action="mailto:ei.copo@earlham.ac.uk?subject=I'm interested in COPO!"
+            <form id="email_form" action="mailto:{{copo_email}}?subject=I'm interested in COPO!"
                 method="post" enctype="text/plain">
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
