migrartion for view_lock and js update

--- a/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
+++ b/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
@@ -30,7 +30,7 @@
         <input type="hidden" id="showAllCOPOAccessions" value="{{ showAllCOPOAccessions }}" />
 
         {% if showAllCOPOAccessions is True %}
-            <input type="hidden" id="nav_component_name" value="accessions_dashboard"/>
+            <input type="hidden" id="nav_component_name" value="accessions"/>
         {% else %} 
             <input type="hidden" id="nav_component_name" value="accessions"/>
             <input type="hidden" id="profile_id" value="{{ profile_id }}"/>
