--- a/src/apps/copo_news/static/copo_news/css/copo_news.css
+++ b/src/apps/copo_news/static/copo_news/css/copo_news.css
@@ -270,7 +270,7 @@
 }
 
 .news-image-default:before {
-    background-image: url('static/assets/img/news_image_default.jpg');
+    background-image: url('../images/news_image_default.jpg');
 }
 
 /* News: Related news */
