Banner model changes: Added a base banner CSS and provided references to it, removed old references to Banner model and its objects

--- a/src/apps/copo_core/templates/copo/copo_docs.html
+++ b/src/apps/copo_core/templates/copo/copo_docs.html
@@ -136,6 +136,13 @@
             </button>
         </div>
 
+        <!-- Banner -->
+        {% if banner %}
+            <div class="global-warning-banner" title="{{banner.body}}">
+                <h1>{{ banner.header }}</h1>
+            </div>
+        {% endif %}
+
         <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
 
         </ul>
