--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block title %}About{% endblock %}
 
-{% block stylesheet_block %}F
+{% block stylesheet_block %}
 <style>
     body {
         background-color: rgba(49, 48, 44, 0.7);
