--- a/src/apps/copo_landing_page/templates/base1.html
+++ b/src/apps/copo_landing_page/templates/base1.html
@@ -21,6 +21,8 @@
     <title>{% block title %}{% endblock %} | COPO</title>
 
     <link href="/static/assets/css/base_styles.css" rel="stylesheet"/>
+    <link href="/static/assets/css/base_banner.css" rel="stylesheet" />
+
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/semantic_ui/semantic.min.css' %}">
     <link href="/static/assets/css/bootstrap.css" rel="stylesheet"/>
