--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -1,17 +1,25 @@
 {% load web_tags %}
 {% load static %}
-<nav class="navbar navbar-default navbar-fixed-top navbar-fixed-left" style="height: 10px !important; min-height: 59px;"
+<nav id="frontpage-navbar-outer" class="navbar navbar-default navbar-fixed-top navbar-fixed-left" style="height: 10px !important; min-height: 59px;"
      role="navigation">
-    <div class="container-fluid" style="display:block">
+    <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand"
                href="{% if user.is_authenticated %} {% url 'copo_profile_index:index' %} {% else %}/{% endif %}">
-                <img style="height: 45px; margin-left: 12px; margin-top: -8px; padding: 2px;"
+                <img class="{% if banner %}margin-top-neg-12{% else %}margin-top-neg-8{% endif %}" style="height: 45px; margin-left: 12px; padding: 2px;"
                      src="{% static 'assets/img/COPO-logo-full-CMYK-black.png' %}"
                      alt="COPO logo">
             </a>
         </div>
-        <div class="collapse navbar-collapse" id="frontpage-navbar">
+
+        <!-- Banner -->
+        {% if banner %}
+            <div class="global-warning-banner" title="{{banner.body}}">
+                <h1>{{ banner.header }}</h1>
+            </div>
+        {% endif %}
+
+        <div id="frontpage-navbar-inner" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li role="presentation"><a href="/" target="_parent">Home</a></li>
                 <li class="dropdown">
