Fixed conflicting CSS on TOL dashboard web page

--- a/src/apps/copo_tol_dashboard/static/tol_dashboard/css/copo_tol_dashboard.css
+++ b/src/apps/copo_tol_dashboard/static/tol_dashboard/css/copo_tol_dashboard.css
@@ -1,3 +1,17 @@
+
+
+/* Ignore conflicting CSS from material-dashboard.css */
+.navbar > .container-fluid {
+    flex-wrap: revert;
+    align-items: revert;
+    justify-content: revert;
+}
+
+.navbar-collapse {
+    flex-basis: revert;
+    flex-grow: revert;
+}
+
 /* Custom CSS*/
 .alert-info {
     background-image: none !important;
