Refactor approval process

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -80,11 +80,11 @@
         <div class="panel-col-4" id="profile_panel">
             <ul hidden class="nav nav-tabs profile-filter" id="erga">
                 <li class="hot_tab_profile in active">
-                    <a data-toggle="tab" href="my_profiles">Profiles for My Sequencing Centre</a>
+                    <a data-toggle="tab" href="my_profiles">All profiles</a>
                 </li>
-                <li class="hot_tab_profile in">
+                <!--li class="hot_tab_profile in">
                     <a data-toggle="tab" href="all_profiles">All profiles</a>
-                </li>  
+                </li-->  
             </ul>
 
             <ul hidden class="nav nav-tabs profile-filter" id="non_erga">
