--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
@@ -58,8 +58,8 @@
                                         <div class="associated_type_div_value ">
                                             <ul class="associated_type_ulTag">
                                                 {% for element in profile.associated_type %}
-                                                    <li> {{ element.value }}
-                                                        <i class="fa fa-info-circle associated_type_info_icon" title="{{ element.label }}"></i>
+                                                    <li> {{ element }}
+                                                        <i class="fa fa-info-circle associated_type_info_icon" title="{{ element | get_assoicated_type_label }}"></i>
                                                     </li>
                                                 {% endfor %}
                                             </ul>
