Added icons to the record table buttons on the 'Accept/Reject' web page

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -119,13 +119,16 @@
             <span style="margin-left:20px" id="edit-buttons">
                 <button class="select-all tiny ui basic button" tabindex="0" aria-controls="" type="button"><span>Select all visible</span></button>
                 <button class="select-none tiny ui basic button" tabindex="0" aria-controls="" type="button"><span>Select None</span></button>
-                <button class="delete-selected tiny ui red basic button" tabindex="0" aria-controls=""
-                        type="button"><span>Delete Selected</span></button>
-                <button class="download-permits tiny ui orange basic button" tabindex="0" aria-controls="" type="button"><span>Download
-                        Permits</span>
+                <button class="delete-selected tiny ui red basic button" tabindex="0" aria-controls="" type="button">
+                    <i class="fa fa-trash-can"></i>
+                    <span>Delete Selected</span></button>
+                <button class="download-permits tiny ui orange basic button" tabindex="0" aria-controls="" type="button">
+                    <i class="fa fa-download"></i>
+                    <span>Download Permits</span>
                 </button>
-                <button class="view-images tiny ui teal basic button" tabindex="0" aria-controls="" type="button"><span>View
-                        Images</span>
+                <button class="view-images tiny ui teal basic button" tabindex="0" aria-controls="" type="button">
+                    <i class="fa fa-eye"></i>
+                    <span>View Images</span>
                 </button>
             </span>
 
