Removed unnecessary string

--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -229,7 +229,7 @@
     <script src="{% static 'copo/js/generic_handlers_ext2.js' %}"></script>
     <script src="{% static 'copo/js/generic_handlers.js' %}"></script>
     <script src="{% static 'copo/js/copo_form_handlers.js' %}"></script>
-    <script src="{% static 'copo_profile/js/copo_profile_index.js' %}"></script>dd
+    <script src="{% static 'copo_profile/js/copo_profile_index.js' %}"></script>
     {% include 'copo/profile/custom_profile_js.html' %}
 {% endblock %}
 
