--- a/src/apps/copo_core/templates/copo/terms_of_use.html
+++ b/src/apps/copo_core/templates/copo/terms_of_use.html
@@ -96,8 +96,8 @@
                     </li>
                     <li> Please see our documentation on the various profile components for
                         <a
-                            href="https://copo-docs.readthedocs.io/en/latest/profile/standalone/standalone-profile-walkthrough.html#stand-alone-profile-components">
-                            Stand-alone profiles
+                            href="https://copo-docs.readthedocs.io/en/latest/profile/genomics/genomics-profile-walkthrough.html#genomics-profile-components">
+                            Genomics profiles
                         </a> and <a
                             href="https://copo-docs.readthedocs.io/en/latest/profile/tol/tol-profile-walkthrough.html#tree-of-life-profile-components">Tree
                             of Life (ToL) profiles</a> for more information concerning the restrictions and 
