--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_dashboard.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_dashboard.html
@@ -257,10 +257,9 @@
                                         <tbody></tbody>
                                     </table>
                                 </div>
-                                <div class="chart chart-xs">
-                                    <canvas id="pieChartID" class="chartjs-render-monitor" width="796" height="400"
-                                            style="display: block; height: 400px !important; width: 500px !important;"
-                                            aria-label="taxonomy representation" role="figure">
+                                <div class="chart chart-xs piechart_container">
+                                    <canvas id="pieChartID" class="chartjs-render-monitor" 
+                                        aria-label="taxonomy representation" role="figure">
                                     </canvas>
                                 </div>
                                 <div id="taxonomyLevelsDivID" class="form-group" style="padding-top: 20px;">
