--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -53,8 +53,12 @@
   <input
     type="hidden"
     id="component_subtitle"
-    value="<select id='checklist_id' name='checklists'>{% for checklist in checklists %}<option value='{{ checklist.primary_id }}' title='{{checklist.description}}' >{{ checklist.primary_id }} : {{ checklist.name }}</option>{% endfor %}</select> "
+    value="<select id='checklist_id' name='checklists'>{% for checklist in checklists %}<option value='{{ checklist.primary_id }}' title='{{checklist.description}}' >  {{ checklist.primary_id }} : {{ checklist.name }}</option>{% endfor %}</select> "
   />
+  <input
+    type="hidden"
+    id="profile_checklist_ids"
+    value="{{ profile_checklist_ids|join:',' }}" />
 </div>
 {% endblock %}
 {% block page_tile %}
